2012-01-14  Juan Pablo Santos (juanpablo AT apache DOT org)

        * 2.9.0-svn-4
        
        * taken back <signeddist/> goal from 3.0 branch in order to be able to accomplish 
          JSPWIKI-557
          
2012-02-01  Harry Metske <metskem@apache.org>

        * 2.9.0-svn-3
        
        * fixed JSPWIKI-719 (plugin compatibility with com.ecyrd.jspwiki)
        
        * draft ReleaseNotes

2012-01-29  Florian Holeczek <florianh@apache.org>

        * 2.9.0-svn-2
        
        * corrected some minor errors which emerged from package renaming

2012-01-25  Harry Metske <metskem@apache.org>

        * 2.9.0-svn-1
        
        * release bump because of package rename
        
2012-01-25  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-10
        
        * the decision was made to candidate 2.8 for graduation instead of 3.0, this is the first wave

        * package rename com.ecyrd.jspwiki => org.apache.wiki
        
        * moved a couple of (test) classes to other packages
        
        * add copyright templates to some test sources
        
        * remove remaining author tags 

2012-01-14  Juan Pablo Santos (juanpablo AT apache DOT org)

        * no version bump
        * corrected failing unit tests: 17 of them were locale dependant (test assertions assumed 
          english locale), so TestEngine enforces it when building mock requests
        * RCSFileProvider tests are executed only if RCS is detected in path.

2011-09-20  Florian Holeczek <florianh@apache.org>

        * no version bump
        * modified jspwiki-checkstyle.xml to be compatible with CheckStyle 5.x
        * corrected a few things CheckStyle was nagging about

2011-09-20  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-9
        
        * moved security manager check for JSPWIKI-705 from SessionMonitor to WikiServletFilter, and 
           make it a log message instead of an exception.

2011-09-18  Harry Metske <metskem@apache.org>
